--- a/lesson7/css/style.css
+++ b/lesson7/css/style.css
@@ -30,3 +30,32 @@ header>div>p:nth-child(2){
     font-size: 13px;
     font-weight: 400;
 }
+.main{
+    width: 1800px;
+    height: 1620px;
+    background-color: white;
+}
+
+main >.text > div:nth-child(1),
+main >.text>div:nth-child(2){
+    vertical-align:top;
+    display: inline-block;
+    width: 550px;
+    height: 360px;
+    margin-left: 320px;
+    margin-top:110px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    color: #959595;
+}
+main >.text > div:nth-child(1)>p:nth-child(1){
+    font-family: 'Open Sans', sans-serif;
+    font-size: 35px;
+    font-weight: 300;
+    color: #222626;
+}
+main >.text>div:nth-child(2){
+    margin-left: 30px;
+    padding-top: 175px;
+}
